--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,6 @@
 {
   "cli": {
-    "version": ">= 16.13.4",
+    "version": ">= 12.6.2",
     "appVersionSource": "remote"
   },
   "build": {
@@ -9,9 +9,19 @@
       "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal"
+      "android": {
+        "buildType": "apk"
+      },
+      "distribution": "internal",
+      "env": {
+        "EXPO_PUBLIC_API_URL": "https://expenses.jahbyte.com/api/v1/"
+      }
     },
     "production": {
+      "android": { "buildType": "app-bundle" },
+      "env": {
+        "EXPO_PUBLIC_API_URL": "https://expenses.jahbyte.com/api/v1/"
+      },
       "autoIncrement": true
     }
   },
