--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-screens": "^4.18.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0"
   },
