--- a/eas.json
+++ b/eas.json
@@ -14,13 +14,13 @@
       },
       "distribution": "internal",
       "env": {
-        "EXPO_PUBLIC_API_URL": "https://expenses.jahbyte.com/api/v1/"
+        "EXPO_PUBLIC_API_BASE_URL": "https://expenses.jahbyte.com/api/v1/"
       }
     },
     "production": {
       "android": { "buildType": "app-bundle" },
       "env": {
-        "EXPO_PUBLIC_API_URL": "https://expenses.jahbyte.com/api/v1/"
+        "EXPO_PUBLIC_API_BASE_URL": "https://expenses.jahbyte.com/api/v1/"
       },
       "autoIncrement": true
     }
